<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gdprLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CB371"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_activity_info_gdpractivity"
                android:textColor="#ffffff"
                android:textSize="30dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10sp"
                android:text="@string/info_gdpractivity"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/confirmGDPR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/conferma"></Button>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>