<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CB371">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3CB371"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/id"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/nec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/id"
                android:inputType="textCapSentences"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/data"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/detnasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:clickable="true"
                android:editable="false"
                android:hint="@string/tap2"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/address"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/citta"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/detcit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/citta"
                android:inputType="textCapSentences"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/telefonoedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/phone"
                android:inputType="number"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#ffffff" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/certificato"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/aggiungiCertificato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:clickable="true"
                android:editable="false"
                android:hint="@string/tap2"
                android:textColor="#ffffff" />


            <ImageButton
                android:id="@+id/confermabut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/save"
                android:text="Conferma"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>