<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentRelativeDettagli"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CB371">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3CB371"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/fotoProfilo"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/id"
                android:textColor="#ffffff"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/detid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/id"
                android:inputType="number"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/data"
                android:textColor="#ffffff"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/detnasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/data"
                android:inputType="number"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/detaddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/address"
                android:inputType="number"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/citta"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/detcit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/citta"
                android:inputType="number"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/dettel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/phone"
                android:inputType="number"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/certificato"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/detcert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/certificato"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/riepilogoPagamenti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/riepilogo"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="right">

                <ImageButton
                    android:id="@+id/buttonNote"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/notepal"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/buttonPresenzeUtente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/presenze"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/buttonpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/userpay"
                    android:text="Elimina"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="right">

                <ImageButton
                    android:id="@+id/buttonCambiaPalestra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/userchange"
                    android:text="Elimina"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <!-- bottone per la modifica -->
                <ImageButton
                    android:id="@+id/buttonmod1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/usermod"
                    android:text="Elimina"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/buttoneli1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/userdel"
                    android:text="Elimina"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
